--- a/index.ipynb
+++ b/index.ipynb
@@ -454,7 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(pyeongchang_values) # list"
+    "type(pyeongchang_values)"
    ]
   },
   {
